# ChangeLog for net-libs/xyssl
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/xyssl/Attic/ChangeLog,v 1.1 2007/07/13 18:31:09 pylon Exp $

*xyssl-0.7 (13 Jul 2007)

  13 Jul 2007; Lars Weiler <pylon@gentoo.org> +metadata.xml,
  +xyssl-0.7.ebuild:
  Cryptographic library for embedded systems
