@@ -2,14 +2,19 @@
 Hash: SHA1
 
 DIST xyssl-0.7.tgz 175278 RMD160 7af3ee7cbd23cc6bab0e42f1b51533800643bee7 SHA1 04988471667547c099b990a0afa839f0588ba3c0 SHA256 ab5b2a1a0799719684f4ac67a955b39f4e766829db1867c0311177f9dd4a8f81
+DIST xyssl-0.8.tgz 190953 RMD160 b4f26636b8f7eba8dbef84fa7a99d0885ac2aebc SHA1 f738f99e8fcfc5140983babffdd885841297819e SHA256 203435dbc70e6431202583dd44e96beac8e7dfa2a79b1825c84b8e8842255664
 EBUILD xyssl-0.7.ebuild 1264 RMD160 b8706d4c6052a7d5b96771f5d73d3948d17b04e6 SHA1 56c1b7e65396bd9bc6fbbe1058f7a53c2e825af9 SHA256 06c02be1d34fea21c53331193f3a26c7de4038b8a1520990c5206a45f4f589f6
 MD5 8ab4cc031c09ccf329d9875598453927 xyssl-0.7.ebuild 1264
 RMD160 b8706d4c6052a7d5b96771f5d73d3948d17b04e6 xyssl-0.7.ebuild 1264
 SHA256 06c02be1d34fea21c53331193f3a26c7de4038b8a1520990c5206a45f4f589f6 xyssl-0.7.ebuild 1264
-MISC ChangeLog 354 RMD160 4a143c9ebdbcc7c0f5a75cb2aec1f0272d6a0909 SHA1 d7968a678c855d9877ce75d521a395e10c99a0eb SHA256 bd4fd84bbefd850a0b926f7d2beb9ad509f3b06026755952b19ea10966368406
-MD5 e3963c7658e04e56fa5821c380d75ce1 ChangeLog 354
-RMD160 4a143c9ebdbcc7c0f5a75cb2aec1f0272d6a0909 ChangeLog 354
-SHA256 bd4fd84bbefd850a0b926f7d2beb9ad509f3b06026755952b19ea10966368406 ChangeLog 354
+EBUILD xyssl-0.8.ebuild 1278 RMD160 566ab0f4995b3f88d22c805ffe994097cd813293 SHA1 bd0025e7e1b2a7b9cbf05a0e8772ef521700d70a SHA256 07dcdbd803e63bbec45926131aa77528a5e6e561bf6cc80460151ac56ab8a1f6
+MD5 0560359b2864d7c1e82e4ad359f02a25 xyssl-0.8.ebuild 1278
+RMD160 566ab0f4995b3f88d22c805ffe994097cd813293 xyssl-0.8.ebuild 1278
+SHA256 07dcdbd803e63bbec45926131aa77528a5e6e561bf6cc80460151ac56ab8a1f6 xyssl-0.8.ebuild 1278
+MISC ChangeLog 527 RMD160 43f2e263cf4c05dca4331f938382e1892dd2b912 SHA1 f60159b3351858aacde31f7ad748840eaf254c79 SHA256 a15e13f147ec2b71cbd6546d2038dfea26270a8b6e1225ac4f414508861d2e1f
+MD5 9ee237712c3eb86ae57e5c0bab4ccdb0 ChangeLog 527
+RMD160 43f2e263cf4c05dca4331f938382e1892dd2b912 ChangeLog 527
+SHA256 a15e13f147ec2b71cbd6546d2038dfea26270a8b6e1225ac4f414508861d2e1f ChangeLog 527
 MISC metadata.xml 440 RMD160 c19c17c0fb1ac3f93f2f2ddce9faba1f270c1aea SHA1 6fc1acf51e0ce6b76e93c38d03c3d528253a880a SHA256 00e843c172e818f518c316d043c4d17e68742e86604fd79f0b23f72474dd0378
 MD5 b7c5416676a027482d4120c8ac2d9ff0 metadata.xml 440
 RMD160 c19c17c0fb1ac3f93f2f2ddce9faba1f270c1aea metadata.xml 440
@@ -17,10 +22,13 @@ SHA256 00e843c172e818f518c316d043c4d17e68742e86604fd79f0b23f72474dd0378 metadata
 MD5 a60ca89bf0ab273549d4c94d906bc723 files/digest-xyssl-0.7 220
 RMD160 b9adc5378e00004b443d5526d8abbe14c323b1b0 files/digest-xyssl-0.7 220
 SHA256 e9ff4847caf13c42e7bea794d38abcf1cf738872dda6989b6075dfec8ec24132 files/digest-xyssl-0.7 220
+MD5 e0120ac028f224f602abf525018b29ed files/digest-xyssl-0.8 220
+RMD160 6787896becd3d2b3728d54ae652becb7277e3b7a files/digest-xyssl-0.8 220
+SHA256 160e3b140d55735aef6d56c8721a0d0665aff11b644ae75525372c1eb6b95127 files/digest-xyssl-0.8 220
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFGl8Tr6IPkARlRZfQRAk1dAJ4zr/MDH6Rf/vE8oJTE58S4Q6DUjQCfQlRv
-GqdXe4/dEfJB6qTenwPVrok=
-=vLnV
+iD8DBQFHGlCf6IPkARlRZfQRAuhwAJoD+M6xItnmseZ69VAKgAoj+TkxbACcD4LF
+sEK0Ksnxnx6O6wV4ps5jy2k=
+=H68t
 -----END PGP SIGNATURE-----
