@@ -1,0 +1,3 @@
+MD5 5c80e021e3bca4b77fbe2429c9e61541 xyssl-0.8.tgz 190953
+RMD160 b4f26636b8f7eba8dbef84fa7a99d0885ac2aebc xyssl-0.8.tgz 190953
+SHA256 203435dbc70e6431202583dd44e96beac8e7dfa2a79b1825c84b8e8842255664 xyssl-0.8.tgz 190953
