@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/xyssl
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/xyssl/Attic/ChangeLog,v 1.1 2007/07/13 18:31:09 pylon Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/xyssl/Attic/ChangeLog,v 1.2 2007/10/20 19:01:49 pylon Exp $
+
+*xyssl-0.8 (20 Oct 2007)
+
+  20 Oct 2007; Lars Weiler <pylon@gentoo.org> +xyssl-0.8.ebuild:
+  Version bump; thanks to Mikael Voss <ffefd6@haemoglobin.org> for the reminder.
 
 *xyssl-0.7 (13 Jul 2007)
 
